--- a/resources/scss/pdf.scss
+++ b/resources/scss/pdf.scss
@@ -9,24 +9,8 @@
     font-family:    'Times New Roman', Times, serif;
 }
 
-#header {
-    height:     3cm;
-    background: #ccc;
-}
-
-#footer {
-    position:   absolute;
-    bottom:     0;
-    width:      100%;
-    height:     4cm;
-    background: #ccc;
-}
-
 #footer-area {
-    width: 210mm;
-    margin-top: 10mm;
-    margin-left: auto;
-    margin-right: auto;
+    font-size: 10px;
 }
 
 .table-design {
@@ -78,3 +62,4 @@ p {
 .text-end {
     text-align: end;
 }
+
